# DM22358

./: .flake8  .gitignore  .pre-commit-config.yaml  JuliaSet.py  README.md  a1_1_1.py  a1_2_2.py  exercise_1.1.py  pyproject.toml  task2_1.py  task2_1.sh
Assignment2/: pyproject.toml
Assignment2/src/Task 3/: DGEMM.py
Assignment2/src/bonus/: conway.py  conway.py.lprof.prof  conway.py.prof  conway_opt.py  plot.py  time_measurer.py
Assignment2/src/task1/: task1.py
Assignment2/src/task2/: JuliaSet.py  testData.json  test_JuliaSet.py
Assignment2/src/task2/test/: test_example.py
Assignment2/src/task3/: DGEMM.py  DGEMM_Test.py  data_visualize.py
Assignment2/src/task3/data/: BLAS_flops.csv  BLAS_time.csv  array_flops.csv  array_time.csv  list_flops.csv  list_time.csv  numpy_flops.csv  numpy_time.csv
Assignment2/src/task3/data_n1000/: BLAS_flops.csv  BLAS_time.csv  array_flops.csv  array_time.csv  list_flops.csv  list_time.csv  numpy_flops.csv  numpy_time.csv
Assignment2/src/task3/data_n300/: BLAS_flops.csv  BLAS_time.csv  array_flops.csv  array_time.csv  list_flops.csv  list_time.csv  numpy_flops.csv  numpy_time.csv
Assignment3/: README.md  pyproject.toml
Assignment3/assets/: PerformanceCython.txt  PerformanceRawPython.txt
Assignment3/src/: hpc_3.py  lineProfiler.txt  resultLong.txt  task2.py  task2C.html  task2C.pyx  task2_gpu.ipynb
Assignment3/src/Task1/: old.py  run.py  setup.py  task1.c  task1.html  task1.pyx
Assignment3/src/Task2/Cython/: setup.py  task2.py  task2C.c  task2C.pyx  task2CFew.c  task2CFew.pyx  task2Mid.c  task2Mid.pyx
Assignment3/src/Task2/GPU/: setup.py  task2_GPU.py  test.c  (+2 more)
Project/: README.md  pyproject.toml
Project/Doxygen/html/: add__test__cases_8py.html  annotated.html  benchmark_8py.html  classadd__test__cases_1_1_numpy_array_encoder-members.html  classadd__test__cases_1_1_numpy_array_encoder.html  classes.html  doxygen.css  doxygen_crawl.html  files.html  hierarchy.html  index.html  simulate_8py.html
Project/Doxygen/latex/: add__test__cases_8py.tex  annotated.tex  benchmark_8py.tex  classadd__test__cases_1_1_numpy_array_encoder.eps  classadd__test__cases_1_1_numpy_array_encoder.tex  files.tex  hierarchy.tex  index.tex  refman.tex  simulate_8py.tex
Project/src/: README.md  add_test_cases.py  benchmark.py  compare_implementation.py  cython_mean_theta.c  cython_mean_theta.pyx  getNeighbors.cpp  neighbors.c  neighbors.pyx  numpy_test.pyx  perfOpt1Improve1.txt  setup.py  simulate.py  simulate_flocking_test.py  tester.c  tester.html  tester.pyx
Project/src/benchmarks/: .gitignore  cprofile.py  line_profile.py  memory_profile.py
Project/src/original_code/: activematter.py
Project/src/test_suite/: exampleOut.txt  test_data.json  test_data_loop.json  test_data_whole_loop.json
(+58 files in other folders)
