[project]
name = "hpc_assignment3"
description = ">Assignmet 3 from intro to HPC course at KTH "
version = "0.1.0"
authors = [
    { name = "Íñigo Aréjula", email = "ingoaa@kth.se"},
    { name = "Elliot Darth", email = "edarth@kth.se"},
    { name = "Oskar Grönman", email = "ogronman@kth.se"},
]
dependencies = [
    "matplotlib",
    "numpy",
    "Cython",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pylint",
    "black",
    "sphinx",
    "perf",
    "line_profiler",
    "pytest",
]


[tool.black]
line-length = 100
