[project]
name = "kth_intro_hpc_course"
description = "The project from intro to HPC course at kth "
version = "0.1.0"
authors = [
    { name = "Íñigo Aréjula", email = "ingoaa@kth.se"},
    { name = "Elliot Darth", email = "edarth@kth.se"},
    { name = "Oskar Grönman", email = "ogronman@kth.se"},
]
dependencies = [
    "snakeviz",
    "line_profiler",
    "memory_profiler",
    "psutil",
    "matplotlib",
    "numpy",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "flake8",
]

[tool.black]
line-length = 100
